# Api_gateway/pkg/handler/admin.go
@@ -379,3 +379,28 @@ func (h *GigHandler) Payment(c *fiber.Ctx) error {
 	}
 	return c.Status(200).JSON(res)
 }
+
+// Logout
+// @Summary Logs out the user
+// @Description Clears the authentication cookie and logs the user out
+// @Tags Admin
+// @Accept json
+// @Produce json
+// @Router /admin/logout [post]
+func (h *UserHandler) Logout(c *fiber.Ctx) error {
+	// Clear the authentication cookie
+	c.Cookie(&fiber.Cookie{
+		Name:     "AdminToken",       // The name of the cookie to clear
+		Value:    "",                // Set an empty value
+		Expires:  time.Now().Add(-1), // Expire the cookie immediately
+		HTTPOnly: true,
+		Secure:   false,             // Adjust based on your deployment
+		SameSite: fiber.CookieSameSiteLaxMode,
+		Domain:   "ashif.online",    // Match the domain used in login
+	})
+
+	// Return a success response
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"message": "Logged out successfully",
+	})
+}
