# Api_gateway/pkg/router/user.go
@@ -21,4 +21,5 @@ func UserProfile(r fiber.Router, handller *handler.UserHandler) {
 	r.Post("/profile-photo", middleware.Auth(Role), handller.UploadProfilePhoto)
 	r.Post("/address", middleware.Auth(Role), handller.UpdateAddress)
 	r.Put("/role", middleware.Auth(Role), handller.RoleChange)
+	r.Post("/logout", middleware.Auth(Role), handller.Logout)
 }
